<resources>
    <string name="app_name" translatable="false">AskUs</string>
    <string name="linkSignUp">No account yet? <u>Create one</u></string>
    <string name="fillFields">Don\'t let any empty field</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="invalidPassword">" The password must have at least six characters."</string>
    <string name="password">Password</string>
    <string name="rememberPassword"> <u>I\'ve forgotten my password</u> </string>
    <string name="emailSent">Email sent</string>
    <string name="emailNeeded">Email field needed</string>
    <string name="error_emailSent">Error sending the email</string>
    <string name="errorLogin">Error login</string>
    <string name="lblEmail_account">Email</string>
    <string name="lblNickname">Nickname</string>
    <string name="invalid_credentials">Invalid credentials.</string>
    <string name="there_was_an_error">There was an error.</string>
    <string name="error_internet">There was an error. Check internet connection.</string>
    <string name="repeat_password">Repeat password</string>
    <string name="error_create_user">Error creating user. Try again later.</string>
    <string name="error_sign_up">Check the fields.\nEmail must have a valid email pattern\nThe password must be at least six characters.\nPassword fields must match.
    </string>
    <string name="error_create_user_conflict">User creation failed. The nickname or email already exist.</string>
    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="tb_activity_main_title" translatable="false">Askus</string>
    <string name="drawer_closed">close</string>
    <string name="allPosts">All</string>
    <string name="top_rated">Top rated</string>
    <string name="top_commented">Top commented</string>
    <string name="linkLogin">Already have an account? <u>Log in</u></string>
    <string name="drawer_opened">open</string>
    <string name="message_dialog_password_lost">If you have forgotten your password, contact the support team at: avazquez.developer@gmail.com</string>
    <string name="send_post">Send post</string>
    <string name="anonymous">Anonymous</string>
    <string name="post_sended">Post sent</string>
    <string name="post_body_hint">What\'s up? … Write here a brief summary…</string>
    <string name="spinner_select_category">Select category</string>
    <string name="select_at_least_one_category">Select at least one category</string>
    <string name="error_sending_post">There was an error sending your post. Try again later.</string>
    <string name="you_cant_vote_twice">You cannot vote twice on the same post.</string>
    <string name="processed_vote">Your vote has been processed.</string>
    <string name="lore_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam maximus sollicitudin viverra. Phasellus rutrum egestas faucibus. Curabitur placerat, libero convallis faucibus euismod, arcu nunc aliquam sem, et egestas est magna in arcu. Fusce aliquam orci tincidunt, consectetur orci ac, vehicula turpis. Nullam porta hendrerit purus sit amet lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec laoreet placerat neque in efficitur. Mauris auctor vel ipsum sit amet dictum. Cras sodales, justo et semper efficitur, arcu nisi tincidunt elit, vitae rhoncus lacus ex in est. Suspendisse convallis, ipsum quis laoreet suscipit, risus elit sodales est, quis pulvinar ligula urna dapibus diam. Duis urna augue, vestibulum iaculis mollis tincidunt, blandit a elit. Ut tempor, tellus eget porttitor suscipit, lectus elit auctor mauris, eget dictum purus velit finibus leo. Nullam pharetra id ex ut tristique. Etiam sodales iaculis neque, vel tincidunt nulla auctor id. Sed quis faucibus nulla. Nam convallis nisl nec augue consectetur ultricies. Mauris vitae porttitor massa. Integer convallis felis id mi elementum, ut varius turpis vulputate. Quisque ac vestibulum dui. Duis ut tortor sapien. Fusce congue dui vitae nibh commodo, id bibendum nisl pellentesque. Aenean quis imperdiet nibh. Vestibulum scelerisque consequat sapien at fringilla. Pellentesque vel viverra elit. Curabitur commodo odio sed ligula elementum, nec aliquam magna euismod. Duis imperdiet tempor ullamcorper. Etiam nec molestie elit, nec sodales lacus. Mauris viverra nunc est, sit amet condimentum augue maximus et. Mauris sed mi id sapien pretium semper. Mauris non nisl a dui iaculis scelerisque. Fusce auctor mollis purus. Etiam molestie nibh eu eros mattis, non ultricies est venenatis. Morbi lacinia mattis odio eu interdum. Proin ut dui orci. Nulla cursus molestie nibh, a mattis urna mattis vitae. Maecenas suscipit elementum urna in pharetra. Curabitur tincidunt bibendum dolor eu facilisis. Fusce lobortis quam vel justo lacinia, nec efficitur ante lobortis. Integer eu quam finibus, interdum massa quis, luctus magna. Mauris dignissim velit a metus semper mollis. Integer vel euismod nulla, ac ultrices tortor. Pellentesque id libero pharetra, ornare dolor at, volutpat elit. Mauris ultrices laoreet aliquet. Ut eu leo quis leo pellentesque viverra. Praesent aliquam laoreet odio, sit amet bibendum justo elementum sit amet. Maecenas maximus, arcu eget pharetra tincidunt, urna enim tempor lectus, a porta mi metus sit amet nibh. Ut quis efficitur diam, at rhoncus nulla. Suspendisse non feugiat orci. Nam pulvinar nisl bibendum lectus rhoncus, ut porta justo semper. Cras faucibus sem ut magna vehicula tempus. Nullam vel erat urna. Integer suscipit ornare felis. Proin consequat, odio at placerat mattis, dui est auctor lectus, non gravida tellus sapien non ex. Ut congue libero euismod ante elementum, eu imperdiet est commodo. Sed aliquam pellentesque tellus sit amet vulputate. Duis accumsan diam in dui finibus, sed ultrices est mattis. Etiam sodales molestie turpis a ullamcorper.</string>
    <string name="send">Send</string>
    <string name="comment_sent">Comment sent</string>
    <string name="error_sending_comment">Error sending comment</string>
    <string name="title">Title</string>
    <string name="what_s_going_on">What\'s going on?</string>
    <string name="average_user_rating">Average user rating:</string>
    <string name="number_of_published_publications">Number of published publications:</string>
    <string name="number_of_publications_sent">Number of publications sent:</string>
    <string name="number_of_written_comments">Number of written comments:</string>
    <string name="last_login_date">"Last login date: "</string>
    <string name="account_creation_date">Account creation date:</string>
    <string name="loading">Loading …</string>
    <string name="remember_password">Remember password</string>
    <string name="internal_server_error">Server error. Try again later.</string>
    <string name="menu_moderation">Moderation</string>
    <string name="post_something_and_find_out_what_people_think_about_that_little_issue_of_you">Post something and find out what people think about that little issue of you…</string>
    <string name="user_want_to_exit">Do you really want to exit AskUs?</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="no_more_posts_to_moderate">There\'s no more post to moderate. Come again later.</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="dark_mode">Night mode</string>
    <string name="tag_to_show_when_the_app_is_opened">Tag to show when the app is opened</string>
    <string name="main_tag">Main tag</string>
    <string name="enable_night_mode">Enable night mode</string>
    <string name="share_using">Share using …</string>
    <string name="download">Download</string>
    <string name="check_out_this_post">"Check out this post from Askus!! "</string>
    <string name="link_download" translatable="false"><![CDATA[https://play.google.com/store/apps/details?id=es.iesnervion.avazquez.puntokus&gl=ES]]></string>
    <string name="terms_of_use_moderation_sec">If you agree to be a moderator you must meet a series of rules:
        \n1. The main reason for rejecting posts is orthographic, you should not be guided by tastes. That\'s what the standard votes for published publications are for.
        \n2. Publications that violate the privacy rights of others or constitute a hate crime will also be rejected.</string>
    <string name="accept">Accept</string>
    <string name="agree_moderator">You have agreed to be a moderator. Reload the page in a few minutes.</string>
    <string name="introduce_la_nueva_contrase_a">Introduce new password</string>
    <string name="introduce_tu_contrase_a_actual">Introduce current password</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="password_changed">Your password has been successfully changed</string>
    <string name="error_changing_password">There was an error while changing your password. Try again later.</string>
    <string name="delete_account_text">Are you sure you want to delete the account? This action can not be undone.All data related to your account will be deleted.</string>
    <string name="account_successfully_removed">Account was successfully removed.</string>
    <string name="error_deleting_account">There was an error deleting the account. Try again later.</string>
    <string name="there_are_no_posts_send_one_and_see_if_you_are_lucky">There are no posts, send one and see if you are lucky!</string>

</resources>
