<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/ThemeOverlay.MaterialComponents.Light"
    tools:context=".ui.fragments.SignUpFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="20dp"
            android:paddingRight="24dp">

            <ImageView
                android:id="@+id/splash_img"
                android:layout_width="150dp"
                android:layout_height="181dp"
                android:layout_gravity="center"
                android:layout_weight="0.15"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_weight="0.01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="50dp"
                android:gravity="center"
                android:text="@string/app_name" />

            <!-- Nick Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lblNickname"
                    android:inputType="text"
                    android:maxLength="25"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="254"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lblEmail_account"
                    android:inputType="textEmailAddress"
                    android:maxLength="254"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                app:counterEnabled="true"
                app:endIconTint="@color/colorPrimary"
                app:counterMaxLength="20"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:maxLength="20"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/lbl_error_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                tools:visibility="visible"
                tools:text="Texto largo de error para probar"
                android:layout_marginTop="5dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/signup" />

            <TextView
                android:id="@+id/link_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/linkLogin"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>