<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.profileFragment.view.ProfileFragment">
    <LinearLayout
        android:id="@+id/llayout"
        android:weightSum="100"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:padding="15dp"
                tools:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="19sp"
                    android:id="@+id/lbl_profile_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constrainedHeight="true"
                    tools:text="randomkwiz"
                    android:gravity="center" />

                <LinearLayout
                    app:layout_constraintTop_toBottomOf="@id/lbl_profile_nickname"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/number_of_written_comments"
                            android:layout_width="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/lbl_written_comments"
                            tools:text="50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/number_of_publications_sent"
                            android:layout_width="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/lbl_sent_posts"
                            tools:text="50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/number_of_published_publications"
                            android:layout_width="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/lbl_posted_posts"
                            tools:text="50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/average_user_rating"
                            android:layout_width="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/user_mark"
                            tools:text="50"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/last_login_date"
                            android:layout_width="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/last_login_date"
                            tools:text="@tools:sample/date/ddmmyy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/account_creation_date"
                            android:layout_width="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/register_date"
                            tools:text="@tools:sample/date/ddmmyy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_weight="50"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            tools:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            tools:background="@color/colorAccent"
            android:id="@+id/swipeRefreshLayout"
            android:layout_weight="50"
            android:layout_gravity="bottom"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_logros"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/logro_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

    <ImageView
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/gradient"
        app:layout_anchor="@id/llayout"
        app:layout_anchorGravity="bottom" />
</androidx.constraintlayout.widget.ConstraintLayout>